[package]
name = "anchor-attribute-constant"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for creating constant types"
edition = "2021"

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]

[dependencies]
anchor-syn = { path = "../../syn", version = "0.30.1" }
quote = "1"
syn = { version = "1", features = ["full"] }
