[package]
name = "anchor-attribute-event"
version = "0.28.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Anchor attribute macro for defining an event"

[lib]
proc-macro = true

[features]
idl-build = ["anchor-syn/idl-build"]
anchor-debug = ["anchor-syn/anchor-debug"]
event-cpi = ["anchor-syn/event-cpi"]

[dependencies]
anchor-syn = { workspace = true, features = ["hash"] }
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
