[package]
name = "anchor-attribute-interface"
version = "0.25.15"
authors = ["Serum Foundation <foundation@projectserum.com>"]
repository = "https://github.com/staratlasmeta/anchor.git"
license = "Apache-2.0"
description = "Attribute for defining a program interface trait"
edition = "2021"
publish = ["star-atlas"]

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]

[dependencies]
anchor-syn = { path = "../../syn", version = "0.25.15", registry = "star-atlas" }
anyhow = "1.0.32"
heck = "0.3.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.60", features = ["full"] }
