[package]
name = "anchor-derive-accounts"
version = "0.30.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor Derive macro for accounts"
rust-version = "1.60"
edition = "2021"

[lib]
proc-macro = true

[features]
allow-missing-optionals = ["anchor-syn/allow-missing-optionals"]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
init-if-needed = ["anchor-syn/init-if-needed"]

[dependencies]
anchor-syn = { path = "../../syn", version = "0.30.0" }
quote = "1"
syn = { version = "1", features = ["full"] }
