[package]
name = "anchor-derive-serde"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor Derive macro for serialization and deserialization"
edition = "2021"

[lib]
proc-macro = true

[features]
idl-build = ["anchor-syn/idl-build"]
lazy-account = []

[dependencies]
anchor-syn = { path = "../../syn", version = "0.30.1" }
borsh-derive-internal = "0.10.3"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
