[package]
name = "anchor-derive-serde"
version = "0.31.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor Derive macro for serialization and deserialization"
edition = "2021"

[lib]
proc-macro = true

[features]
idl-build = ["anchor-syn/idl-build"]
lazy-account = []

[dependencies]
anchor-syn = { workspace = true }
borsh-derive-internal = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
