[package]
name            = "anchor-derive-space"
version         = "0.28.0"
authors         = { workspace = true }
repository      = { workspace = true }
license         = { workspace = true }
description     = "Anchor Derive macro to automatically calculate the size of a structure or an enum"
rust-version    = { workspace = true }
edition         = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["extra-traits"]}
